Formatted a lot of the app; fixed column overflow

--- a/static/style.css
+++ b/static/style.css
@@ -11,7 +11,7 @@ body {
 
 #game-layout {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   padding: 20px;
   min-width: 320px; /* Mobile-friendly minimum width */
 }
@@ -25,7 +25,6 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center; /* Centers children horizontally */
-  padding-right: 20px;
 }
 
 #right-column {
@@ -112,7 +111,7 @@ body {
 .hex {
   width: 60px;
   height: 60px;
-  background: #DCDBDB;
+  background: #ece9e9;
   clip-path: polygon(
     50% 0%, 93% 25%, 93% 75%,
     50% 100%, 7% 75%, 7% 25%
@@ -169,7 +168,7 @@ body {
   display: flex;
   justify-content: center;
   gap: 20px;
-  margin-top: 10px;
+  margin-top: 20px;
 }
 
 #button-panel button {
@@ -207,8 +206,9 @@ body {
 
 #word-list-container {
   border: 1px solid rgb(214, 214, 214);
-  /* height: 300px; */
-  height: 100%;
+  height: 400px;
+  overflow-y: auto; /* enables vertical scrolling */
+  overflow-x: hidden; /* prevents horizontal scroll if columns overflow */
   padding: 10px;
 }
 
@@ -216,6 +216,7 @@ body {
   display: flex;
   font-size: 12px;
   gap: 10px;
+  margin-top: 15px;
 }
 
 .word-column {
@@ -228,6 +229,12 @@ body {
   border-bottom: 1px solid lightgray;
   break-inside: avoid;
   padding: 4px 0;
+}
+
+#word-message {
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 12px;
+  justify-content: center;
 }
 
 @media (max-width: 500px) {
